--- a/package.json
+++ b/package.json
@@ -14,5 +14,18 @@
     "devDependencies": {
         "@vitejs/plugin-vue": "^5.2.1",
         "vite": "^6.0.11"
-    }
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+ssh://git@github.com/quantify/vue3-pivottable.git"
+    },
+    "keywords": [
+        "vue",
+        "pivot",
+        "pivottable",
+        "vue-pivottable",
+        "vue3-pivottable"
+    ],
+    "homepage": "https://github.com/quantify/vue3-pivottable",
+    "license": "MIT"
 }
